[gd_scene load_steps=19 format=3 uid="uid://bpg2k3in0j2uw"]

[ext_resource type="Script" uid="uid://b0ygc7ora0kwb" path="res://scenes/game_object/player/player.gd" id="1_cmfem"]
[ext_resource type="PackedScene" uid="uid://dgqs7t3v1ip1b" path="res://scenes/component/velocity_component.tscn" id="2_ob030"]
[ext_resource type="PackedScene" uid="uid://boxtydmx16gt6" path="res://scenes/component/health_component.tscn" id="2_trofc"]
[ext_resource type="PackedScene" uid="uid://bp087ip72sskb" path="res://scenes/component/random_stream_player_2d_component.tscn" id="5_qj1o4"]
[ext_resource type="AudioStream" uid="uid://c42hpcst6dtau" path="res://assets/audio/impactMining_000.ogg" id="6_i6wm3"]
[ext_resource type="AudioStream" uid="uid://brcm4ce0x81k" path="res://assets/audio/impactMining_001.ogg" id="7_2w0kc"]
[ext_resource type="AudioStream" uid="uid://3mjalyukedpa" path="res://assets/audio/impactMining_002.ogg" id="8_bbap5"]
[ext_resource type="AudioStream" uid="uid://dsj1rk25ggath" path="res://assets/audio/impactMining_003.ogg" id="9_8ca68"]
[ext_resource type="Texture2D" uid="uid://b6xue8diksig" path="res://resources/player_characters/lightsaber.png" id="10_28lpv"]
[ext_resource type="AudioStream" uid="uid://b40upkuex0jyk" path="res://assets/audio/impactMining_004.ogg" id="10_ycb4m"]

[sub_resource type="Animation" id="Animation_f2yqw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_y02i5"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(0.217639, 1.03527, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(0.5, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.1), Vector2(1.2, 0.8), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mpgth"]
_data = {
&"RESET": SubResource("Animation_f2yqw"),
&"walk": SubResource("Animation_y02i5")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mn4y8"]
bg_color = Color(0.247059, 0.14902, 0.129412, 1)
border_color = Color(0.247059, 0.14902, 0.129412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ea7gj"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.129412, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_x38fu"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kf4kp"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_71bye"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_cmfem")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mpgth")
}

[node name="VelocityComponent" parent="." instance=ExtResource("2_ob030")]
max_speed = 80
acceleration = 25.0

[node name="HealthComponent" parent="." instance=ExtResource("2_trofc")]

[node name="Abilities" type="Node" parent="."]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -26.0
offset_right = 16.0
offset_bottom = -20.0
pivot_offset = Vector2(16, 3)
theme_override_styles/background = SubResource("StyleBoxFlat_mn4y8")
theme_override_styles/fill = SubResource("StyleBoxFlat_ea7gj")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="HitRandomAudio" parent="." instance=ExtResource("5_qj1o4")]
streams = Array[AudioStream]([ExtResource("6_i6wm3"), ExtResource("7_2w0kc"), ExtResource("8_bbap5"), ExtResource("9_8ca68"), ExtResource("10_ycb4m")])

[node name="PickupArea2D" type="Area2D" parent="."]
position = Vector2(0, -5)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
shape = SubResource("CircleShape2D_x38fu")

[node name="CollisionArea2D" type="Area2D" parent="."]
position = Vector2(0, -7)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
shape = SubResource("CircleShape2D_kf4kp")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture_filter = 1
texture = ExtResource("10_28lpv")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_71bye")
